# libmetnum

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/: metnum.hpp  metnum_common.hpp  metnum_diffeq.hpp  metnum_eqsolver.hpp  metnum_rootfinder.hpp
lib/armadillo-12.2.0/: CMakeLists.txt
src/: main.cpp  metnum_common.cpp  metnum_diffeq.cpp  metnum_eqsolver.cpp  metnum_rootfinder.cpp
